<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivityWithNavDrawer">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_us_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


<!--            Contact Us Text View-->
            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="0dp"
                android:paddingStart="20dp"
                android:paddingBottom="15dp"
                android:paddingEnd="0dp"
                android:text="@string/tv_contact_us"/>

            <!--  Contact Us Location Image-->
            <ImageView
                android:id="@+id/iv_contact_us"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:src="@drawable/ic_contact_us_image"
                android:contentDescription="@string/label_contact_us"
                app:layout_constraintTop_toTopOf="@id/tv_contact_us"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"/>

            <!--            Contact Us Hours -->
            <TextView
                android:id="@+id/tv_contact_us_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/iv_contact_us"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:layout_marginTop="-10dp"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contact_us_hours"/>

            <!--            Contact Us Address -->
            <TextView
                android:id="@+id/tv_contact_us_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_us_hours"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contact_us_address"/>

            <!--            Contact Us Phone -->
            <TextView
                android:id="@+id/tv_contact_us_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_us_address"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contact_us_phone"/>


            <!--            Contact Us Email -->
            <TextView
                android:id="@+id/tv_contact_us_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_us_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contact_us_email"/>


            <!--            Contact Us Website -->
            <TextView
                android:id="@+id/tv_contact_us_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_us_email"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contact_us_website"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_loading_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorError"
            android:visibility="invisible" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>
</ScrollView>